log/build_2025-10-16_11-01-50/audio_streamer/stdout_stderr.log
running egg_info
writing ../../build/audio_streamer/audio_streamer.egg-info/PKG-INFO
writing dependency_links to ../../build/audio_streamer/audio_streamer.egg-info/dependency_links.txt
writing entry points to ../../build/audio_streamer/audio_streamer.egg-info/entry_points.txt
writing requirements to ../../build/audio_streamer/audio_streamer.egg-info/requires.txt
writing top-level names to ../../build/audio_streamer/audio_streamer.egg-info/top_level.txt
reading manifest file '../../build/audio_streamer/audio_streamer.egg-info/SOURCES.txt'
writing manifest file '../../build/audio_streamer/audio_streamer.egg-info/SOURCES.txt'
running build
running build_py
copying audio_streamer/audio_subscriber.py -> /home/mariem/ros2_ws/build/audio_streamer/build/lib/audio_streamer
running install
running install_lib
copying /home/mariem/ros2_ws/build/audio_streamer/build/lib/audio_streamer/audio_subscriber.py -> /home/mariem/ros2_ws/install/audio_streamer/lib/python3.10/site-packages/audio_streamer
byte-compiling /home/mariem/ros2_ws/install/audio_streamer/lib/python3.10/site-packages/audio_streamer/audio_subscriber.py to audio_subscriber.cpython-310.pyc
  File "/home/mariem/ros2_ws/install/audio_streamer/lib/python3.10/site-packages/audio_streamer/audio_subscriber.py", line 13
    self.declare_parameter('output_device_index', -1) self.output_device_index = self.get_parameter('output_device_index').get_parameter_value().integer_value 
                                                      ^^^^
SyntaxError: invalid syntax

running install_data
copying config/params.yaml -> /home/mariem/ros2_ws/install/audio_streamer/share/audio_streamer/config
running install_egg_info
removing '/home/mariem/ros2_ws/install/audio_streamer/lib/python3.10/site-packages/audio_streamer-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/audio_streamer/audio_streamer.egg-info to /home/mariem/ros2_ws/install/audio_streamer/lib/python3.10/site-packages/audio_streamer-0.0.0-py3.10.egg-info
running install_scripts
Installing audio_pub script to /home/mariem/ros2_ws/install/audio_streamer/lib/audio_streamer
Installing audio_sub script to /home/mariem/ros2_ws/install/audio_streamer/lib/audio_streamer
writing list of installed files to '/home/mariem/ros2_ws/build/audio_streamer/install.log'
